add cart pop up message

--- a/checkout.html
+++ b/checkout.html
@@ -27,18 +27,18 @@
         <div class=" checkout-summary  js-checkout-summary"></div>
       </div>
     </div>
-    <div class="footer">
+    <div class="footer" id="footer">
       <div class="footer-grid">
-        <div>
-          <div>Follow us </div>
-          <div>Our Terms and Condition</div>
-          <div>Contact Us</div>
+        <div class="foot-links">
+          <div><a href="#">Follow us </a></div>
+          <div><a href="#">Our Terms and Condition</a></div>
+          <div><a href="#">Contact Us</a></div>
         </div>
 
-        <div>
-          <div>Report a Product</div>
-          <div>Ship Your Package anywhere in the world</div>
-          <p>Create Account</p>
+        <div class="foot-links">
+          <div><a href="#">Report a Product</a></div>
+          <div><a href="#">Ship Your Package anywhere in the world</a></div>
+          <p><a href="#">Create Account</a></p>
         </div>
       </div>
       <p class="copy-right js-copy-right" >
