--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
             <span class="u-shop-logo"><h2>uShop</h2></span>
           </a>
         </div>
-        <div class="cart-message js-add-to-cart-message" id="cart-message">
+        <div class="message" id="cart-message">
         </div>
         <div class="header-middle">
-          <button class="btn-search-icon"><img src="images/icons/search-icon.png" alt="search-icon" class="search-icon"></button>
           <input type="text" placeholder="search products, brands & category" class="input-search">
+          <button class="btn-search-icon"><img src="images/icons/search-icon.png" alt="search-icon" class="search-icon"></button>
         </div>
-
         <div class="header-right">
-          <img class="user-icon" src="images/icons/user-icon.png" alt="user-icon" width="40" height="40">
+          <img class="user-icon" src="images/icons/user-icon.png" alt="user-icon" width="30" height="30">
           <a href="checkout.html" class="cart-link">
             <div class="cart-container">
               <img src="images/icons/cart-icon.png" alt="cart-icon" class="cart-logo">
@@ -55,7 +54,6 @@
           <div><a href="#">Our Terms and Condition</a></div>
           <div><a href="#">Contact Us</a></div>
         </div>
-
         <div class="foot-links">
           <div><a href="#">Report a Product</a></div>
           <div><a href="#">Ship Your Package anywhere in the world</a></div>
