add some general styles

--- a/checkout.html
+++ b/checkout.html
@@ -19,12 +19,14 @@
       <span class="cart-quantity cart-total-quantity">0</span>
       </div>
     </div>
-    <div class="checkout-app">
-      <div class="cart-summary js-cart-summary"></div>
-      <div class="main-checkout-grid">
-        <div class="wrapper  js-checkout-wrapper">
+    <div id="wrapper">
+      <div class="container">
+        <div class="cart-summary js-cart-summary"></div>
+        <div class="main-checkout-grid">
+          <div class="wrapper  js-checkout-wrapper">
+          </div>
+          <div class="checkout-summary  js-checkout-summary"></div>
         </div>
-        <div class=" checkout-summary  js-checkout-summary"></div>
       </div>
     </div>
     <div class="footer" id="footer">
