--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </div>
           </a>
         </div>
+        <i>open</i>
       </div>
     </header>
     <div class="slide-container">
