add some general styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="message" id="cart-message">
         </div>
         <div class="header-middle">
-          <input type="text" placeholder="search products, brands & category" class="input-search">
+          <input type="text" placeholder="search e.g sports, fashion, appliances" class="input-search">
           <button class="btn-search-icon"><img src="images/icons/search-icon.png" alt="search-icon" class="search-icon"></button>
         </div>
         <div class="header-right">
