add links to header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Shop Circuit Project </title>
     <link rel="stylesheet" href="styles/u-shop-header.css">
     <link rel="stylesheet" href="styles/u-shop.css">
+    <script src="https://kit.fontawesome.com/cbc94a0dc0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="preloader">
@@ -21,8 +22,12 @@
         <div class="message" id="cart-message">
         </div>
         <div class="header-middle">
-          <input type="text" placeholder="search e.g sports, fashion, appliances" class="input-search">
-          <button class="btn-search-icon"><img src="images/icons/search-icon.png" alt="search-icon" class="search-icon"></button>
+          <span class="span">Report products</span>
+          <span  class="span">Order products</span>
+        </div>
+        <div class="account">
+          <span>Create Account</span>
+          <span>Login</span>
         </div>
         <div class="header-right">
           <img class="user-icon" src="images/icons/user-icon.png" alt="user-icon" width="30" height="30">
@@ -33,7 +38,6 @@
             </div>
           </a>
         </div>
-        <i>open</i>
       </div>
     </header>
     <div class="slide-container">
@@ -51,7 +55,11 @@
     <div class="footer">
       <div class="footer-grid">
         <div class="foot-links">
-          <div><a href="#">Follow us </a></div>
+          <div><a href="">Follow us </a><br>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-whatsapp"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+          </div>
           <div><a href="#">Our Terms and Condition</a></div>
           <div><a href="#">Contact Us</a></div>
         </div>
