add social media handles to footer

--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <title>Check out page </title>
     <link rel="stylesheet" href="styles/checkout.css">
     <link rel="stylesheet" href="styles/checkout-header.css">
+    <script src="https://kit.fontawesome.com/cbc94a0dc0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="header">
@@ -32,7 +33,11 @@
     <div class="footer" id="footer">
       <div class="footer-grid">
         <div class="foot-links">
-          <div><a href="#">Follow us </a></div>
+          <div><a href="#">Follow us </a><br>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-square-whatsapp"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+          </div>
           <div><a href="#">Our Terms and Condition</a></div>
           <div><a href="#">Contact Us</a></div>
         </div>
