--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       </div>
     </header>
     <div class="slide-container">
-        <img src="images/men's-sleeveless.jpg" alt="sleeveless shirt" id="slider-image">
-          <img src="images/white-sneakers.jpg" alt="white men's shoe" id="slider-image">
-        <img  src="images/suit-trousers.jpg" alt=" men suit trousers" id="slider-image">
-        <img src="images/women's-standard-kit.jpg" alt="stock women clothes" id="slider-image">
+        <img src="images/men's-sleeveless.jpg" id="slider-image">
+          <img src="images/white-sneakers.jpg" id="slider-image">
+        <img  src="images/suit-trousers.jpg"  id="slider-image">
+        <img src="images/women's-standard-kit.jpg" id="slider-image">
     </div>
     <div class="marquee"><marquee behavior="scroll" direction="left">uShop holds a rousing shopping deal. Neglect late shoppings, Shop promptly and save fast with our amazing coupons today!!</marquee>
     </div>
