--- a/checkout.html
+++ b/checkout.html
@@ -1,39 +1,54 @@
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check out page </title>
-    <link rel="stylesheet" href="styles/checkout.css">
-    <link rel="stylesheet" href="styles/checkout-header.css">
-    <script src="https://kit.fontawesome.com/cbc94a0dc0.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Check out page</title>
+    <link rel="stylesheet" href="styles/checkout.css" />
+    <link rel="stylesheet" href="styles/checkout-header.css" />
+    <script
+      src="https://kit.fontawesome.com/cbc94a0dc0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="header">
-      <div class="header-left">
-        <a href="index.html" target="_blank" class="u-shop-logo"><h1>uShop</h1></a>
-      </div>
-      <div class="header-right">
-        <img src="images/icons/user-icon.png" alt="user-icon" width="30" height="30" class="user-icon">
-      <div class="cart-container">
-        <a href="checkout.html"><img src="images/icons/cart-icon.png" alt="cart-icon" width="45" height="45"></a>
-      </div>
-      <span class="cart-quantity cart-total-quantity">0</span>
+    <div>
+      <div class="header">
+        <div class="header-left">
+          <a href="index.html" target="_blank"><h1>uShop</h1></a>
+        </div>
+        <div class="header-right">
+          <div class="user-container">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="cart-container">
+            <a href="checkout.html">
+              <i class="fa-solid fa-cart-shopping">
+                <span id="cart" class="cart-quantity cart-total-quantity"
+                  >0</span
+                >
+              </i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <div id="wrapper">
+      <div class="cart-summary">
+        <div class="js-cart-summary"></div>
+        <h4 class="call"><span>Call To Order</span>: 09023560242</h4>
+      </div>
       <div class="container">
-        <div class="cart-summary js-cart-summary"></div>
         <div class="main-checkout-grid">
-          <div class="wrapper  js-checkout-wrapper">
-          </div>
-          <div class="checkout-summary  js-checkout-summary"></div>
+          <div class="wrapper js-checkout-wrapper"></div>
+          <div class="checkout-summary js-checkout-summary"></div>
         </div>
       </div>
     </div>
     <div class="footer" id="footer">
       <div class="footer-grid">
         <div class="foot-links">
-          <div><a href="#">Follow us </a><br>
+          <div>
+            <a href="#">Follow us </a><br />
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-square-whatsapp"></i>
             <i class="fa-brands fa-square-instagram"></i>
@@ -48,8 +63,7 @@
           <p><a href="#">Create Account</a></p>
         </div>
       </div>
-      <p class="copy-right js-copy-right" >
-      </p>
+      <p class="copy-right js-copy-right"></p>
     </div>
     <script type="module" src="scripts/checkout.js"></script>
   </body>
